--- a/themes/mainroad/layouts/_default/baseof.html
+++ b/themes/mainroad/layouts/_default/baseof.html
@@ -7,7 +7,7 @@
 	<title>{{ block "title" . }}{{ .Title }}{{ end }}</title>
 	<script>(function(d,e){d[e]=d[e].replace("no-js","js");})(document.documentElement,"className");</script>
 	<meta name="description" content="{{ if .IsHome }}{{ .Site.Params.description }}{{else}}{{ .Params.Description }}{{end}}">
-	{{ .Hugo.Generator }}
+	{{ hugo.Generator }}
 	{{ if .Site.Params.opengraph }}{{ template "_internal/opengraph.html" . }}{{ end }}
 	{{ if .Site.Params.twitter_cards }}{{ template "_internal/twitter_cards.html" . }}{{ end }}
 	<link rel="dns-prefetch" href="//fonts.googleapis.com">
@@ -18,8 +18,7 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700">
 	<link rel="stylesheet" href="{{ "css/style.css" | relURL }}">
 	<link rel="shortcut icon" href="{{ "favicon.ico" | relURL }}">
-	{{- if not .Site.IsServer }}
-		{{ template "_internal/google_analytics_async.html" . }}
+	{{- if not hugo.IsServer }}
 	{{- end }}
 </head>
 <body class="body">
