--- a/themes/mainroad/layouts/partials/authorbox.html
+++ b/themes/mainroad/layouts/partials/authorbox.html
@@ -1,19 +1,20 @@
 {{- if .Param "authorbox" }}
+{{- $author := default (dict) (or .Site.Params.author .Site.Params.Author) }}
 <div class="authorbox clearfix">
-	{{- if and (not .Site.Author.avatar) (not .Site.Author.name) (not .Site.Author.bio) }}
-	<p class="authorbox__warning"><strong>WARNING:</strong> Authorbox is activated, but [Author] parameters are not specified.</p>
+	{{- if and (not $author.avatar) (not $author.name) (not $author.bio) }}
+	<p class="authorbox__warning"><strong>WARNING:</strong> Authorbox is activated, but [Params.author] parameters are not specified.</p>
 	{{- end }}
-	{{- with .Site.Author.avatar }}
+	{{- with $author.avatar }}
 	<figure class="authorbox__avatar">
-		<img alt="{{ $.Site.Author.name }} avatar" src="{{ $.Site.Author.avatar | relURL }}" class="avatar" height="90" width="90">
+		<img alt="{{ $author.name }} avatar" src="{{ . | relURL }}" class="avatar" height="90" width="90">
 	</figure>
 	{{- end }}
-	{{- with .Site.Author.name }}
+	{{- with $author.name }}
 	<div class="authorbox__header">
 		<span class="authorbox__name">{{ T "authorbox_name" . }}</span>
 	</div>
 	{{- end }}
-	{{- with .Site.Author.bio }}
+	{{- with $author.bio }}
 	<div class="authorbox__description">
 		{{ . }}
 	</div>
