--- a/themes/mainroad/layouts/partials/comments.html
+++ b/themes/mainroad/layouts/partials/comments.html
@@ -1,4 +1,5 @@
-{{ if and .Site.DisqusShortname (not (or .Site.Params.disable_comments .Params.disable_comments)) (not .Site.IsServer) }}
+{{ $shortname := site.Config.Services.Disqus.Shortname }}
+{{ if and $shortname (not (or .Site.Params.disable_comments .Params.disable_comments)) (not hugo.IsServer) }}
 <section class="comments">
 	{{ template "_internal/disqus.html" . }}
 </section>
