--- a/layouts/shortcodes/quiz.html
+++ b/layouts/shortcodes/quiz.html
@@ -3,7 +3,7 @@
 {{- $question := .Get "question" | default "" }}
 <div class="quiz-container" id="{{ $questionId }}">
   <div class="quiz-question">
-    <h3 class="quiz-title">{{ $question }}</h3>
+    <h3 class="quiz-title">{{ $question | markdownify}}</h3>
   </div>
   <div class="quiz-options">
     {{ .Inner | markdownify }}
